# panda-proof

./: .env.example  .gitignore  CREDITS_GUIDE.md  INSTALLABLE_APP_GUIDE.md  capacitor.config.ts  index.html  netlify.toml  package-lock.json  package.json  server.js  supabase-avatars-migration.sql  supabase-community-schema.sql  supabase-credits-schema.sql  supabase-credits-v2-migration.sql  supabase-design-edits-migration.sql  supabase-schema.sql  supabase-storage-migration.sql  supabase-welcome-credits-migration.sql  supabase-welcome-email-flag-migration.sql  vite.config.js
.github/workflows/: android-apk.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/colorpandamedia/pandaproof/: MainActivity.java
android/app/src/main/res/values/: strings.xml
ios/App/App/: Info.plist
ios/App/App.xcodeproj/: project.pbxproj
ios/App/CapApp-SPM/: Package.swift
public/: _redirects  landing.html  manifest.json  privacy.html  sw.js  terms.html
scripts/: generate-icons.js
src/: AccountSettings.jsx  AdminPanel.jsx  App.jsx  AuthView.jsx  CampaignFlow.jsx  ChatBubble.jsx  CommunityView.jsx  CreditsModal.jsx  DesignEditor.jsx  IgThumbnailsFlow.jsx  MenuImproverFlow.jsx  api.js  brand.js  pandaScoreConfig.js  supabase.js  useProfile.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/config/: credits.js
